# twitter-recommender-mimic-mini-recsys

./: .gitignore  AGENTS.md  Agent.md  README.md  candidates.py  data_loader.py  embeddings.py  filtering.py  main.py  pipeline.py  pyproject.toml  safety.py  scoring.py
data/: embeddings.parquet  follows.parquet  interactions.parquet  tweets.parquet  users.parquet
diagram/: system-architecture-diagram.md  system-flow-diagram.md
eval/: eval.py  eval_metric.py
models/: __init__.py  embedding_model.py  engagement_model.pt  engagement_model.py  nsfw_model.pt  safety_models.py  toxicity_model.pt  train_models.py  twhin_model.pt
prep/: generate_dataset.py
scripts/: run_test.py  train_and_test.py
tests/: test_candidates.py  test_embeddings.py  test_error_cases.py  test_pipeline_e2e.py
