[project]
name = "mini-recsys"
version = "0.1.0"
description = "Educational mimic of Twitter's For You recommendation pipeline (twitter/the-algorithm)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "pyarrow>=19.0.0",
    "pandas>=2.2.3",
    "pytest>=9.0.1",
]
